# fastapi101

./: .dockerignore  .env.example  .env.min.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  README.th.md  cookiecutter.json  copier.yml  database.db  docker-compose.dev.yml  docker-compose.loadtest.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
.github/workflows/: ci.yml  helm-validate-example.yml  release-aks-oidc-example.yml  release-eks-oidc-example.yml  release-example.yml  release-gke-oidc-example.yml  workflow-validate-example.yml
alembic/: env.py
alembic/versions/: 20260402_0001_initial_schema.py  293d4e4b24d5_add_archive_fields_to_item.py  4d748507b697_add_restore_fields_to_item.py  648d77f4b62a_initial_migration.py  71dbd5932dea_add_phone_field_to_user.py  ce484f5d6b5f_add_relationship_between_user_and_item.py
app/: README.md  factory.py  main.py
app/api/: deps.py  errors.py  exception_handlers.py  health.py  metrics.py  router.py
app/core/: cache.py  config.py  db.py  deps.py  exception.py  exceptions.py  health.py  logging.py  metrics.py  middleware.py  rate_limit.py  request.py  resilience.py  security.py  telemetry.py
app/db/: base.py  session.py
app/jobs/: __init__.py  bootstrap_platform_admin.py  cleanup_revoked_tokens.py  dispatch_outbox.py  replay_dead_letter_queue.py  report_outbox.py
app/models/: item.py  user.py
app/providers/: email.py  webhook.py
app/schemas/: __init__.py  billing.py  common.py  item.py  ops.py  token.py  user.py
app/services/: __init__.py  auth_service.py  billing_service.py  email_service.py  entitlement_service.py  exceptions.py  item_service.py  outbox_service.py  result.py  user_service.py  webhook_service.py
app/worker/: __init__.py  idempotency.py  outbox.py  publisher.py  runner.py  schemas.py  tasks.py
deploy/kubernetes/: app-configmap.yaml  app-deployment.yaml  app-hpa.yaml  app-ingress.yaml  app-networkpolicy.yaml  app-secret.example.yaml  cleanup-revoked-tokens-cronjob.yaml  (+4 more)
docs/: adoption-checklists.md  api-contracts.md  api-guide.md  api-recipes.md  architecture.md  auth-for-clients.md  billing-entitlements-draft.md  bootstrap.md  configuration.md  database-migrations.md  database-schema.md  deployment.md  development.md  error-codes.md  first-deploy-checklist.md  load-testing.md  observability.md  openapi.md  operations.md  platform-starter.md  production-topology.md  release-notes.md  secret-management.md  security-hardening.md  security.md  template-readiness-tracker.md  versioning.md
docs-thai/: README.md  adoption-checklists.md  api-contracts.md  api-guide.md  api-recipes.md  architecture.md  auth-for-clients.md  billing-entitlements-draft.md  bootstrap.md  configuration.md  database-migrations.md  database-schema.md  deployment.md  development.md  error-codes.md  first-deploy-checklist.md  load-testing.md  observability.md  openapi.md  operations.md  platform-starter.md  production-topology.md  release-notes.md  secret-management.md  security-hardening.md  security.md  versioning.md
scripts/: loadtest.sh  run-cleanup-revoked-tokens.sh  run-replay-dead-letter-queue.sh  start-dev.sh  start-outbox-dispatcher-dev.sh  start-outbox-dispatcher.sh  start-web.sh  start-worker-dev.sh  start-worker.sh  validate_helm_settings.py
tests/: conftest.py  test_auth.py  test_item.py
(+99 files in other folders)
